--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "9.0.0-rc.2",
     "nuxt": "^3.11.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
