--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
+    "@langchain/openai": "^0.0.12",
     "@nuxtjs/i18n": "9.0.0-rc.2",
     "nuxt": "^3.11.2",
+    "openai": "^4.76.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
@@ -19,7 +22,8 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "nuxt-primevue": "^0.3.1"
-  },
-  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
+    "@types/node": "^22.10.1",
+    "nuxt-primevue": "^0.3.1",
+    "typescript": "^5.7.2"
+  }
 }
